resolve database problem & try to  display post

--- a/templates/frontoffice/base.html.twig
+++ b/templates/frontoffice/base.html.twig
@@ -45,7 +45,11 @@
             {% endfor %}
             {% block content %}{% endblock %}
           <a href="">CV</a><br>
-
+          
+        <article>
+        <h2>{{ post.title }}</h2>
+        <p>{{ post.text }}</p>
+        </article>
         </main>
         
         <footer class="footer text-center">
