contact form validator securité

--- a/templates/frontoffice/home.html.twig
+++ b/templates/frontoffice/home.html.twig
@@ -4,7 +4,7 @@
         <header>            
             <h1>Apprenez à apprendre chaque jour avec nos posts.</h1>
         </header>
-
+    {{render (controller('Projet_5\src\Controller\Frontoffice\PostController.php::homePage'))}}
         <main>            
       
         <article id="post" >
