--- a/templates/frontoffice/base.html.twig
+++ b/templates/frontoffice/base.html.twig
@@ -3,7 +3,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>Blog {% block title %}{% endblock %}</title>
+        <title>Blog {% block title %}{% endblock title %}</title>
         <!-- Bootstrap CSS -->
         <link href="/assets/css/style.css" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -31,7 +31,12 @@
                 </ul>
             </div>
         </nav>
-
+    
+    {% block content %}    
+    {% block all_posts %}
+    {% endblock all_posts  %}
+    {% block contact %}
+    {% endblock contact %}
       <!-- Footer --> 
 
         <footer class="footer text-center" id="footer">
@@ -40,7 +45,8 @@
                     <a class="btn text-theme-primary mb-1" href="https://github.com/Nsahed"><i class="fab fa-github"></i> Dépôt Github</a>
                     <a class="btn  text-theme-primary mb-1" href="https://www.linkedin.com/in/nacerasahed"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
             <h3>Copyright Sahed Nacera</h3>
-        </footer>      
+        </footer>  
+     {% endblock content %}        
         <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
