--- a/templates/frontoffice/base.html.twig
+++ b/templates/frontoffice/base.html.twig
@@ -8,6 +8,7 @@
         <link href="/assets/css/style.css" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/68f4d8e92b.js" crossorigin="anonymous"></script>
+        <link rel="icon" href="/assets/favicon/favicon.jpg" />
     </head>
 
     <body>
@@ -44,6 +45,7 @@
                     <br>
                     <a class="btn text-theme-primary mb-1" href="https://github.com/Nsahed"><i class="fab fa-github"></i> Dépôt Github</a>
                     <a class="btn  text-theme-primary mb-1" href="https://www.linkedin.com/in/nacerasahed"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
+                    <a class="btn  text-theme-primary mb-1" href=""><i class=""></i> Admin</a>
             <h3>Copyright Sahed Nacera</h3>
         </footer>  
      {% endblock content %}        
