--- a/templates/frontoffice/home.html.twig
+++ b/templates/frontoffice/home.html.twig
@@ -29,8 +29,15 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="md-form mb-0">
-                            <input type="text" id="name" name="name" class="form-control">
-                            <label for="name" class="">Nom</label>
+                            <input type="text" id="lastname" name="lastname" class="form-control">
+                            <label for="lastname" class="">Nom</label>
+                        </div>
+                    </div>
+
+                     <div class="col-md-6">
+                        <div class="md-form mb-0">
+                            <input type="text" id="firstname" name="firstname" class="form-control">
+                            <label for="firstname" class="">Prénom</label>
                         </div>
                     </div>
                    
