--- a/templates/frontoffice/base.html.twig
+++ b/templates/frontoffice/base.html.twig
@@ -3,7 +3,8 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>Blog {% block title %}{% endblock title %}</title>
+        <title>Blog </title>
+        {% block title %}{% endblock title %}
         <!-- Bootstrap CSS -->
         <link href="/assets/css/style.css" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -23,10 +24,10 @@
     </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                  <ul class="navbar-nav ml-auto">
-                    <li class="nav-item {% if url =='accueil' %} active {% endif %}">
+                    <li class="nav-item {% if url =='home' %} active {% endif %}">
                     <a class="nav-link" href="/">Accueil</a>
                     </li>
-                     <li class="nav-item {% if url == 'Posts' %} active {% endif %}">
+                     <li class="nav-item {% if url == 'post' %} active {% endif %}">
                      <a class="nav-link" href="/posts">Posts</a>
                      </li>
                 </ul>
