--- a/templates/frontoffice/listpost.html.twig
+++ b/templates/frontoffice/listpost.html.twig
@@ -28,7 +28,23 @@
                 <a href="index.php?action=login">se connecter</a><br>
             {% endif %}
         </nav>
+   <article >
+        <h2>{{ post.title }}</h2>
+        <p>{{ post.text }}</p>
+    </article>
 
+    <section>
+        <h3>Commentaires</h3>
+        {% if comments %}
+            {% for comment in comments %}
+                <p>id =  {{ comment.id }}<br>
+                pseudo = {{ comment.pseudo }}<br>
+                text = {{ comment.text }}</p>
+            {% endfor %}
+        {% else %}
+            <h4>Aucun commentaires</h4>
+        {% endif %}
+    </section>
         <!-- Page Header -->
         <header>            
             <h1>Blog</h1>
