--- a/templates/frontoffice/base.html.twig
+++ b/templates/frontoffice/base.html.twig
@@ -4,7 +4,6 @@
     <head>
         <meta charset="utf-8">
         <title>Blog </title>
-        {% block title %}{% endblock title %}
         <!-- Bootstrap CSS -->
         <link href="/assets/css/style.css" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -18,22 +17,22 @@
 
         <nav class="navbar navbar-expand-lg navbar-light shadow-sm p-3" id="nav">
             <img src="/assets/favicon/favicon.jpg" width="50" height="50" class="d-inline-block align-top" id="logo" >
-            <a class="navbar-brand" href="#">SAHED Nacéra</a> 
+            <a class="navbar-brand" id="navbar-brand" href="#">SAHED Nacéra</a> 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                  <ul class="navbar-nav ml-auto">
                     <li class="nav-item {% if url =='home' %} active {% endif %}">
-                    <a class="nav-link" href="/">Accueil</a>
+                    <a class="nav-link" id="nav-link1" href="/">Accueil</a>
                     </li>
-                     <li class="nav-item {% if url == 'post' %} active {% endif %}">
-                     <a class="nav-link" href="/posts">Posts</a>
+                     <li class="nav-item {% if url == 'posts' %} active {% endif %}">
+                     <a class="nav-link"  id="nav-link2" href="index.php?action=posts">Posts</a>
                      </li>
                 </ul>
             </div>
         </nav>
-    
+     {% block title %}{% endblock title %}
     {% block content %}    
     {% block all_posts %}
     {% endblock all_posts  %}
