--- a/templates/frontoffice/base.html.twig
+++ b/templates/frontoffice/base.html.twig
@@ -36,17 +36,16 @@
     {% block content %}    
     {% block all_posts %}
     {% endblock all_posts  %}
-    {% block contact %}
-    {% endblock contact %}
+ 
       <!-- Footer --> 
 
         <footer class="footer text-center" id="footer">
-             <span class="text-theme-primary">Projet 5 parcours développeur d'application PHP/Symfony chez OpenClassrooms.</span>
+             <span class="text-theme-primary" id="footer_sentence">Projet 5 parcours développeur d'application PHP/Symfony chez OpenClassrooms.</span>
                     <br>
                     <a class="btn text-theme-primary mb-1" href="https://github.com/Nsahed"><i class="fab fa-github"></i> Dépôt Github</a>
                     <a class="btn  text-theme-primary mb-1" href="https://www.linkedin.com/in/nacerasahed"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
                     <a class="btn  text-theme-primary mb-1" href=""><i class=""></i> Admin</a>
-            <h3>Copyright Sahed Nacera</h3>
+            <h6>Copyright Sahed Nacera</h6>
         </footer>  
      {% endblock content %}        
         <!-- Optional JavaScript -->
