--- a/templates/frontoffice/home.html.twig
+++ b/templates/frontoffice/home.html.twig
@@ -70,7 +70,7 @@
                 </div>
             </form>
 
-            <div class="text-center text-md-left">
+            <div class="btnDiv">
                 <a class="btn" id="btn" onclick="document.getElementById('contact-form').submit();">Soumettre</a>
             </div>
             <div class="status"></div>
