--- a/templates/frontoffice/posts.html.twig
+++ b/templates/frontoffice/posts.html.twig
@@ -4,7 +4,7 @@
 <link href="/assets/css/style.css" rel="stylesheet">
 {% endblock %}
 
-{% block title %}<h2>Tous les posts</h2>{% endblock %}
+{% block title %}<h2 class="postsTitle">Tous les posts</h2>{% endblock %}
 
 {% block content %} 
     {% for post in posts %}
