--- a/templates/frontoffice/post.html.twig
+++ b/templates/frontoffice/post.html.twig
@@ -6,15 +6,17 @@
     <article >
         <h2>{{ post.title }}</h2>
         <p>{{ post.text }}</p>
+        <p>{{ post.createdAt | date }}</p>
+        
     </article>
 
     <section>
         <h3>Commentaires</h3>
         {% if comments %}
             {% for comment in comments %}
-                <p>id =  {{ comment.id }}<br>
-                pseudo = {{ comment.pseudo }}<br>
-                text = {{ comment.text }}</p>
+                <p> {#{{ comment.id }}<br>#}
+                    {{ comment.pseudo }}<br>
+                    {{ comment.text }}</p>
             {% endfor %}
         {% else %}
             <h4>Aucun commentaires</h4>
