creation mail twig

--- a/templates/frontoffice/mail.html.twig
+++ b/templates/frontoffice/mail.html.twig
@@ -9,12 +9,17 @@
         <div class="col-lg-8 col-lg-offset-2">
            {# {% if %}#}
                 <p class="text-center">Le mail a bien été envoyé. Nous vous contacterons dans les plus bref délais</p>
-                <a href="/" class="btn btn-success btn-lg">Retour à la page d'accueil</a>
-            {#{% endif %}#}
+            {# {% else %}#}    
                 <p class="text-center">Le mail n'a pas été envoyé, le formulaire contient une erreur.</p>
+            {#{% endif %}#}    
+                <a href="/" class="btn btn-success btn-lg">Retour à la page d'accueil</a>
+            
+              
             </div>
         </div>
     </div>
  </div>
 </section>
 {% endblock %}
+
+
