--- a/templates/frontoffice/post.html.twig
+++ b/templates/frontoffice/post.html.twig
@@ -5,8 +5,10 @@
 {% block content %} 
     <article >
         <h2>{{ post.title }}</h2>
+        <h5>chapo= {{ post.chapo }}</h5>
         <p>{{ post.text }}</p>
-        <p>{{ post.createdAt | date }}</p>
+        <p> Date de création: {{ post.createdAt | date('d/m/Y')}}</p>
+        <p> Dernière modification: {{ post.updateAt | date('d/m/Y')}}</p>
         
     </article>
 
@@ -15,7 +17,7 @@
         {% if comments %}
             {% for comment in comments %}
                 <p> {#{{ comment.id }}<br>#}
-                    {{ comment.pseudo }}<br>
+                    Auteur : {{ comment.pseudo }}<br>
                     {{ comment.text }}</p>
             {% endfor %}
         {% else %}
