homepage navbar changes

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -20,6 +20,16 @@
     font-size: 1.2rem ;
 }
 
+#nav-link3 {
+    color:black ;
+    font-size: 1.2rem ;
+}
+
+#nav-link4 {
+    color:black ;
+    font-size: 1.2rem ;
+}
+
 #logo {
     margin-left: 25px ;
     margin-right: 50px ;
