--- a/templates/frontoffice/base.html.twig
+++ b/templates/frontoffice/base.html.twig
@@ -1,5 +1,4 @@
 <!doctype html>
-
 <html lang="fr">
     <head>
         <meta charset="utf-8">
@@ -12,13 +11,6 @@
     </head>
 
     <body>
-            {% if session.user %}
-                <strong>{{ session.user.pseudo }}</strong>
-                {#{{ session.user.email }}#}
-                <a href="index.php?action=logout">se déconnecter</a><br>
-            {% else %}
-                <a href="index.php?action=login">se connecter</a><br>
-            {% endif %}
         <!-- Navigation -->
 
         <nav class="navbar navbar-expand-lg navbar-light shadow-sm p-3" id="nav">
@@ -34,6 +26,12 @@
                     </li>
                      <li class="nav-item {% if url == 'posts' %} active {% endif %}">
                      <a class="nav-link"  id="nav-link2" href="index.php?action=posts">Posts</a>
+                     </li>
+                      <li class="nav-item {% if url == 'signin' %} active {% endif %}">
+                     <a class="nav-link"  id="nav-link3" href="index.php?action=signup">S'inscrire</a>
+                     </li>
+                      <li class="nav-item {% if url == 'login' %} active {% endif %}">
+                     <a class="nav-link"  id="nav-link4" href="index.php?action=login">Se connecter</a>
                      </li>
                 </ul>
             </div>
