--- a/templates/frontoffice/post.html.twig
+++ b/templates/frontoffice/post.html.twig
@@ -1,18 +1,18 @@
 {% extends "/frontoffice/base.html.twig" %}
 
-{% block title %}post.title{% endblock %}
+{% block title %}{% endblock %}
 
 {% block content %} 
-    <article >
-        <h2>{{ post.title }}</h2>
-        <h5>chapo= {{ post.chapo }}</h5>
-        <p>{{ post.text }}</p>
-        <p> Date de création: {{ post.createdAt | date('d/m/Y')}}</p>
-        <p> Dernière modification: {{ post.updateAt | date('d/m/Y')}}</p>
-        
-    </article>
-
-    <section>
+  <div class="card-header" id="post">
+   <h2>{{ post.title }}</h2>
+  </div>
+  <div class="card-body" id="postcontent">
+    <h5 class="card-title"> {{ post.chapo }}</h5>
+    <p class="card-text">Date de création: {{ post.createdAt | date('d/m/Y')}}</p>
+    <p class="card-text"> Dernière modification: {{ post.updateAt | date('d/m/Y')}}</p>
+  </div>
+  <div class="card-footer text-muted">
+     <section>
         <h3>Commentaires</h3>
         {% if comments %}
             {% for comment in comments %}
@@ -24,4 +24,7 @@
             <h4>Aucun commentaires</h4>
         {% endif %}
     </section>
+  </div>
+</div>
+        
 {% endblock %}
