problem display user_id on post

--- a/templates/frontoffice/post.html.twig
+++ b/templates/frontoffice/post.html.twig
@@ -8,8 +8,11 @@
   </div>
   <div class="card-body" id="postcontent">
     <h5 class="card-title"> {{ post.chapo }}</h5>
+     <p class="card-text">Date de création: {{ post.text }}</p>
     <p class="card-text">Date de création: {{ post.createdAt | date('d/m/Y')}}</p>
     <p class="card-text"> Dernière modification: {{ post.updateAt | date('d/m/Y')}}</p>
+    <p class="card-text"> Auteur: {{ post.id_user}}</p>
+    
   </div>
   <div class="card-footer text-muted">
      <section>
