--- a/templates/frontoffice/home.html.twig
+++ b/templates/frontoffice/home.html.twig
@@ -46,7 +46,7 @@
                     <div class="col-md-6">
                         <div class="md-form mb-0">
                             <label for="email" class="">Email</label>
-                            <input type="text" id="email" name="email" class="form-control">
+                            <input type="email" id="email" name="email" class="form-control">
                         </div>
                     </div>
                 </div>
