--- a/templates/frontoffice/post.html.twig
+++ b/templates/frontoffice/post.html.twig
@@ -11,7 +11,7 @@
      <p class="card-text">Date de création: {{ post.text }}</p>
     <p class="card-text">Date de création: {{ post.createdAt | date('d/m/Y')}}</p>
     <p class="card-text"> Dernière modification: {{ post.updateAt | date('d/m/Y')}}</p>
-    <p class="card-text"> Auteur: {{ post.id_user}}</p>
+    <p class="card-text"> Auteur: {{ post.username}}</p>
     
   </div>
   <div class="card-footer text-muted">
